--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,24 +1,82 @@
-.pai {
-color: pink;
-display: flex;
-background-color: gray;
-justify-content: space-around;
+
+
+.body {
+    margin: 0;
+    padding: 0;
+    font-family: "inter";
 
 }
 
-.logo img{
-    width: 100px;
-}
 
-
-.botoes{
-    background-color: rgb(253, 169, 235);
-    width: 30px;
+.cabeçalho{
     display: flex;
-    gap: 10px;
+   gap: 50px;
+    justify-content: space-between;
+    justify-content: center;
+    margin-top: 30px;
+    
+
 }
 
-.placeholder input{
+.barradepesquisa{
+    display: flex;
     width: 400px;
-    height: 30px;
+    height: 40px;
+    background-color: whitesmoke;
+    border-radius: 8px;
+    border:none;
+
+}
+
+.lupa{
+    
+    display: flex;
+    align-items: center;
+    background-color: none;
+    margin-left: 90%;
+    margin-top: -35px;
+    position: relative;
+    
+   
+    
+    
+
+}
+
+.lupabarra{
+display: flex;
+justify-content: space-between;
+align-items: center;
+cursor: pointer;
+
+
+}
+
+
+
+
+.botao1{
+    background-color: #fff;
+    border: none;
+    width: 114px;
+    height: 40px;
+    text-decoration: underline;
+
+}
+
+.botao2{
+    background-color: #C92071;
+    width: 114px;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
+
+.menu button{
+    margin-left: 25px;
+    margin-top: 50px;
+    border: none;
+    background-color: #fff
+
 }
